feat: add installation script and global CLI setup for quark
feat: enhance main.ts with service namespace handling and new commands

feat: update completion script to include new commands for shell completion

refactor: improve cluster management with async operations and better error handling

feat: implement config manager for local service configurations and persistence

refactor: remove deprecated constants.ts and integrate service groups into q4/constants.ts

feat: enhance dev environment setup with VSCode workspace creation and improved repo handling

refactor: update service manager to handle service dependencies and manifest caching

chore: update types for better clarity and structure in service and Kubernetes configurations

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,7 +35,9 @@
       "moby": true
     },
     "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {
-      "version": "latest"
+      "version": "1.28",
+      "helm": "latest",
+      "minikube": "none"
     },
     "ghcr.io/devcontainers/features/common-utils:2": {
       "installZsh": true,
@@ -51,19 +53,20 @@
         "ms-kubernetes-tools.vscode-kubernetes-tools",
         "ms-azuretools.vscode-docker",
         "github.copilot",
-        "github.copilot-chat"
+        "github.copilot-chat",
+        "github.vscode-pull-request-github"
       ],
       "settings": {
         "deno.enable": true,
         "deno.lint": true,
         "files.exclude": {
-          ".devcontainer": true,
-          "src": true,
-          "scripts": true,
-          "main.ts": true,
-          "deno.*": true,
-          "quark-k8s": true,
-          ".*": true
+          ".devcontainer": false,
+          "src": false,
+          "scripts": false,
+          "main.ts": false,
+          "deno.*": false,
+          "quark-k8s": false,
+          ".*": false
         }
       }
     }
