--- a/deno.json
+++ b/deno.json
@@ -13,8 +13,7 @@
     "@types/inquirer": "npm:@types/inquirer@^9.0.8",
     "inquirer": "npm:inquirer@^12.6.2",
     "chalk": "npm:chalk@5.4.1",
-    "yaml": "npm:yaml@^2.8.0",
-    "@quark/q4": "./q4/mod.ts"
+    "yaml": "npm:yaml@^2.8.0"
   },
   "nodeModulesDir": "none",
   "exports": "./main.ts"
