Add comprehensive tests for cluster management, constants, development environment, infrastructure service loading, integration, manifest generation, service loading, and service management
- Implement tests for ClusterManager to verify singleton behavior, initialization, service directory configuration, and integration with service manager and manifest generator.
- Create tests for constants to ensure structure, consistency, and completeness of service groups and development profiles.
- Add tests for DevEnvironment to validate instantiation, service selection, dependency resolution, and integration with cluster and config managers.
- Develop tests for infrastructure service loader to confirm loading of services and their configurations, including caching behavior.
- Establish integration tests for end-to-end manifest generation, service dependency resolution, complete YAML generation, secret handling, and manager component interactions.
- Introduce manifest generator tests to validate infrastructure and application service manifests, YAML generation, service port detection, and resource limits.
- Create service loader tests to ensure all application services are loaded correctly, validate service dependencies, and check service types and commands.
- Add service manager tests to verify singleton behavior, dependency resolution for various services, and caching mechanisms.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "deno.enable": true
+  "deno.enable": true,
+  "deno.lint": true,
+  "deno.unstable": true,
+  "deno.test.enable": true,
+  "deno.test.autoRun": true
 }
