temp fix: pin helm version

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,7 +40,7 @@
     },
     "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {
       "version": "1.28",
-      "helm": "latest",
+      "helm": "3.18.0",
       "minikube": "none"
     },
     "ghcr.io/devcontainers/features/common-utils:2": {
